# neuram

./: .gitignore  README.md  pyproject.toml
neuram/: __init__.py  brain.py  encoder.py  models.py
neuram/processes/: __init__.py  forgetting.py  ltp.py  sleep_cycle.py  spreading_activation.py
neuram/regions/: __init__.py  amygdala.py  basal_ganglia.py  cerebellum.py  hippocampus.py  neocortex.py  prefrontal_cortex.py  sensory_cortex.py  thalamus.py
tests/: test_neuram.py
