[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuram"
version = "0.1.0"
description = "Human brain-inspired memory system for AI agents — engrams, LTP, spreading activation, and sleep-cycle consolidation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["memory", "ai-agents", "neuroscience", "llm", "hippocampus", "engram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "redis[asyncio]>=5.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis[aioredis]>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
